# mohazi

./: .geminiignore  .gitignore  ;  Cargo.toml  README.md  mhz-config.schema.json  mhz.config.json  output.yaml  references.txt  testinput.vis  vis.config.json
.github/workflows/: release.yml
backend/lib/vis/: base64_test.cs  cuid2_test.cs  hash_test.cs  mail_test.cs  test.cs  test_base64.cs  uuid_test.cs  (+1 more)
crates/compiler/: Cargo.toml  cargo.toml
crates/compiler/src/: config.rs  main.rs  templater.rs
crates/compiler/src/templates/C#/: boolean.tera  enum.tera  number.tera  string.tera
crates/compiler/src/templates/csharp/: array.tera  base.tera  boolean.tera  enum.tera  file.tera  image.tera  mail.tera  number.tera  string.tera  uuid.tera  validation.cs
crates/compiler/src/templates/csharp/types/: array.tera  base64.tera  boolean.tera  cidrv4.tera  cidrv6.tera  cuid2.tera  date.tera  document.tera  enum.tera  file.tera  hash.tera  hex.tera  image.tera  mail.tera  number.tera  password.tera  string.tera  url.tera  username.tera  uuid.tera
crates/compiler/src/templates/csharp/utils/: uuid_validator.tera
crates/compiler/src/templates/javascript/: array.tera  base.tera  boolean.tera  enum.tera  file.tera  image.tera  mail.tera  number.tera  string.tera
crates/compiler/src/templates/javascript/types/: array.tera  base64.tera  boolean.tera  cidrv4.tera  cidrv6.tera  cuid2.tera  date.tera  document.tera  enum.tera  file.tera  hash.tera  hex.tera  image.tera  mail.tera  number.tera  password.tera  string.tera  url.tera  username.tera  uuid.tera
crates/compiler/src/templates/javascript/utils/: base64_validator.tera  file_signature.tera  ipaddr.tera  uuid_validator.tera
crates/core/: Cargo.toml  cargo.toml
crates/core/src/: ast.rs  lib.rs  main.rs  vis_to_yaml.rs
crates/core/src/ast/: array.rs  boolean.rs  enum.rs  file.rs  number.rs  string.rs
crates/core/src/tests/: mod.rs  test_grad.vis  test_input.vis  vis_to_yaml_test.rs
crates/core/test/: dump.test.yaml
crates/core_lib/: Cargo.toml
crates/lsp/: Cargo.toml
mhz/: test.mhz
npm/verify/: README.md  package.json
src/: main.rs  vis_to_yaml.rs
vis/: test.vis
(+102 files in other folders)
