[package]
name = "mohazi_compiler"
version = "0.1.0"
edition = "2021"
authors = ["Mohammad Alwarawreh", "Alhareth turab", "Omar zidan"]
description = "Mohazi Programming Language Compiler"

[dependencies]
core_lib = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive", "cargo"] }
indexmap = { version = "2.0", features = ["serde"] }
tera = "1.19" 

miette = { workspace = true }
thiserror = { workspace = true }

# Utilities
anyhow = "1.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
