[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Inherit from workspace
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
regex = "1"
indexmap = { version = "2.0", features = ["serde"] }

serde_json = "1.0"
paste = "1.0"
